#1 - spring boot configuration processor 디펜던시 추가
사용자 정의 application property 를 좀 더 IDE에서 편리하게 연동하여 사용하기 위해 이 디펜던시를 추가

--- a/build.gradle
+++ b/build.gradle
@@ -39,9 +39,16 @@ dependencies {
     // MySQL
     runtimeOnly 'com.mysql:mysql-connector-j'
 
+    // Lombok
     compileOnly 'org.projectlombok:lombok'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
+
+    // Configuration Processor
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+
+    // Devtools
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     // queryDSL 설정
